# fitech-financias

./: docker-compose.yml
repository/finance-api/: Dockerfile  aerich.ini  main.py  pyproject.toml
repository/finance-api/src/app/: router.py
repository/finance-api/src/app/auth/: controller.py  service.py
repository/finance-api/src/app/auth/dto/: __init__.py
repository/finance-api/src/app/auth/responses/: __init__.py
repository/finance-api/src/app/category/: controller.py  repository.py  service.py
repository/finance-api/src/app/category/dto/: __init__.py  create_category.py  update_category.py
repository/finance-api/src/app/category/responses/: __init__.py  category_response.py
repository/finance-api/src/app/core/: base_repository.py  config.py  dependencies.py  models.py  pagination.py  security.py
repository/finance-api/src/app/report/: controller.py  service.py
repository/finance-api/src/app/report/responses/: __init__.py  report_response.py
repository/finance-api/src/app/transaction/: controller.py  repository.py  service.py
repository/finance-api/src/app/transaction/dto/: __init__.py  create_transaction.py  filter_transaction.py  update_transaction.py
repository/finance-api/src/app/transaction/responses/: __init__.py  balance_response.py  summary_response.py  transaction_response.py
repository/finance-api/src/app/user/: controller.py  repository.py  service.py
repository/finance-api/src/app/user/dto/: __init__.py  create_user.py  update_user.py
repository/finance-api/src/app/user/responses/: user_response.py
